<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<modules>
		<module>core</module>
		<module>app</module>
		<module>qdist011</module>
		<module>sdist003</module>
		<module>qdist014</module>
		<module>dpischema</module>
		<module>sdist005</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.8</version>
	</parent>

	<groupId>no.nav.dokdistdpi</groupId>
	<artifactId>dokdistdpi</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<java.version>21</java.version>

		<camel-spring-boot-bom.version>4.16.0</camel-spring-boot-bom.version>
		<libraries-bom.version>26.72.0</libraries-bom.version>
		<tink.version>1.20.0</tink.version>
		<tink-gcpkms.version>1.10.0</tink-gcpkms.version>
		<commons-compress.version>1.28.0</commons-compress.version>
		<commons-io.version>2.21.0</commons-io.version>
		<com.ibm.mq.jakarta.client.version>9.4.4.0</com.ibm.mq.jakarta.client.version>
		<logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
		<nimbus-jose-jwt.version>10.6</nimbus-jose-jwt.version>
		<resilience4j-bom.version>2.3.0</resilience4j-bom.version>
		<context-propagation.version>1.2.0</context-propagation.version>
		<slack-api-client.version>1.46.0</slack-api-client.version>

		<!-- plugins -->
		<jaxb-xew-plugin.version>2.1</jaxb-xew-plugin.version>
		<hisrc-jaxb.version>2.2.1</hisrc-jaxb.version>

		<!-- Nav -->
		<dokmet-api.version>2025.11.07-14.12-27ed7b2</dokmet-api.version>
		<dok-legacy-tjenestespesifikasjoner.version>44-7d14e70</dok-legacy-tjenestespesifikasjoner.version>
		<dok-common.version>1.7.1</dok-common.version>

		<!-- Test -->
		<spring-cloud-contract-wiremock.version>4.3.0</spring-cloud-contract-wiremock.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>qdist011</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>qdist014</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>dpischema</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>sdist003</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>sdist005</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistdpi</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.meldinger.virksomhet</groupId>
				<artifactId>dok-melding-virksomhet-dokdistfordeling</artifactId>
				<version>${dok-legacy-tjenestespesifikasjoner.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokmet</groupId>
				<artifactId>api</artifactId>
				<version>${dokmet-api.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dok-common</groupId>
				<artifactId>util</artifactId>
				<version>${dok-common.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>${commons-compress.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-bom</artifactId>
				<version>${camel-spring-boot-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.jakarta.client</artifactId>
				<version>${com.ibm.mq.jakarta.client.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>nimbus-jose-jwt</artifactId>
				<version>${nimbus-jose-jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>libraries-bom</artifactId>
				<version>${libraries-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink</artifactId>
				<version>${tink.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink-gcpkms</artifactId>
				<version>${tink-gcpkms.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-bom</artifactId>
				<version>${resilience4j-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>context-propagation</artifactId>
				<version>${context-propagation.version}</version>
			</dependency>
			<dependency>
				<groupId>com.slack.api</groupId>
				<artifactId>slack-api-client</artifactId>
				<version>${slack-api-client.version}</version>
			</dependency>

			<!-- test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-jakarta-server</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>